
- CrateDB is now based on Elasticsearch 6.1.4 and Lucene 7.1.0.

- Added a new ``bengali`` language analyzer and a ``bengali_normalization``
  token filter.

- Added new ``cluster.routing.allocation.disk.watermark.flood_stage`` setting,
  that controls at which disk usage indices should become read-only to prevent
  running out of disk space. There is also a new node check that indicates
  whether the threshold is exceeded.

- Added new tokenizers ``simple_pattern`` and ``simple_pattern_split`` which
  allow to tokenize text for the fulltext index by a regular expression pattern.

- Changed ``BEGIN`` and ``SET SESSION`` to no longer require ``DQL``
  permissions on the ``CLUSTER`` level.

- Implemented a `Ready` node status JMX metric expressing if the node is ready
  for processing SQL statements.

- Implemented a `NodeInfo` JMX MBean to expose useful information (id, name)
  about the node.

Fixes
=====

- Fixed a performance regression which occurred in queries where a literal was
  compared against an array column of a different type. For example:
  ``Select * from t1 where 1 = ANY(int_arr_column)`` <- array column would be
  converted to long although 1 could have been converted to integer.

- Fixed an issue where the order of the relations in FROM would expose fields
  between the relations. An error was thrown during execution of the statements.

- Fixed incorrect HTTP responses on the BLOB API of subsequent requests after
  an error response occurred, e.g. 404 Not Found.

- Fixed an issue that caused ``ANY`` to not work correctly on nested arrays.

- Fixed an issue that would cause a NullPointerException to be thrown when
  executing an ``EXPLAIN`` statement for a ``CROSS JOIN``.

- Do not allow renaming a table when connected to a read-only node.

- Fixed an issue that would cause a ClassCastException to be thrown instead of
  BatchUpdateException with a descriptive message, when using batched prepared
  statements with ``SELECT`` queries.