@@ -180,6 +180,9 @@ Changes
 Fixes
 =====
 
+- Fixed an issue that caused queries on the `_uid` column to not match
+  correctly.
+
 - Fixed a performance regression which occurred in queries where a literal was
   compared against an array column of a different type. For example:
   ``Select * from t1 where 1 = ANY(int_arr_column)`` <- array column would be
